[package]
name = "craft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
log = "0.4.0"
env_logger = "0.9.0"
llvm-sys = "140"

[dependencies.inkwell]
package = "inkwell"
git = "https://github.com/TheDan64/inkwell"
branch = "master"
features = ["llvm14-0"]

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
